--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>👀 BigEyes</title>
   <style>
-    :root { --bg:#0b1020; --card:#121833; --ink:#e8ecff; --muted:#9aa5d1; --accent:#7aa2ff; }
+    :root {
+      --card:#121833;
+      --ink:#e8ecff;
+      --muted:#9aa5d1;
+      --accent:#7aa2ff;
+    }
     * { box-sizing: border-box; }
-    body { margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, Apple SD Gothic Neo, sans-serif; background:linear-gradient(180deg,#0b1020,#070b17); color:var(--ink); }
-    header { padding:20px; border-bottom:1px solid #21306a; position:sticky; top:0; background:rgba(11,16,32,.6); backdrop-filter:blur(6px); text-align:center; }
+
+    body {
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, Apple SD Gothic Neo, sans-serif;
+      color:var(--ink);
+
+      /* ====== 2번 PNG 느낌 재현 ====== */
+      background: radial-gradient(circle at top left, #1e2a47, transparent 40%),
+                  radial-gradient(circle at bottom right, #0b1225, transparent 40%),
+                  linear-gradient(135deg, #0a0f1e, #111a33);
+      background-blend-mode: overlay;
+      background-attachment: fixed;
+    }
+
+    header {
+      padding:20px;
+      border-bottom:1px solid #21306a;
+      position:sticky; top:0;
+      background:rgba(11,16,32,.6);
+      backdrop-filter:blur(6px);
+      text-align:center;
+    }
     h1 { margin:0; font-size:24px; font-weight:800; display:flex; align-items:center; justify-content:center; gap:8px; }
     h1 .icon { font-size:26px; }
+
     main { max-width:900px; margin:0 auto; padding:20px; display:grid; gap:16px; }
     .card { background:var(--card); border:1px solid #223066; border-radius:16px; padding:16px; }
     .btn { display:inline-flex; align-items:center; justify-content:center; gap:8px; padding:14px 18px; border-radius:14px; background:#1a2a6b; color:#fff; border:1px solid #3350aa; cursor:pointer; font-weight:700; font-size:18px; }
@@ -23,12 +49,12 @@
     select { padding:10px 12px; border-radius:10px; border:1px solid #3350aa; background:#0e1430; color:#e8ecff; }
     .muted { color: var(--muted); }
     .hidden { display:none; }
-    .lead { font-size:15px; line-height:1.7; }
+    .lead { font-size:15px; line-height:1.7; text-align:center; }
     .lead strong { color:#cfe0ff; }
   </style>
 </head>
 <body>
-  <!-- 헤더: 타이틀 가운데 + 아이콘 -->
+  <!-- 헤더 -->
   <header>
     <h1><span class="icon">👀</span> BigEyes</h1>
   </header>
@@ -36,15 +62,9 @@
   <main>
     <!-- 소개 섹션 -->
     <section class="card" aria-label="intro">
-      <h2 style="margin:0 0 8px 0;">BigEyes 소개</h2>
       <div class="lead">
-        “읽기 힘든 글씨, 대신 정리해드립니다”
-        <br/><br/>
-        <strong>한눈 요약 앱 (for 노안·집중 피로)</strong><br/>
-        “많은 정보, 딱 필요한 것만 간단히”
-        <br/><br/>
-        <strong>GPT 요약 도우미</strong><br/>
-        “내 눈과 뇌를 대신하는 작은 비서”
+        <strong>작은 글씨를 쉽고 빠르게 요약합니다.</strong><br/>
+        복잡한 글 → 핵심만 요약
       </div>
     </section>
 
@@ -83,7 +103,7 @@
       <button id="btn-retry1" class="btn secondary">↻ 다시 찍기</button>
     </section>
 
-    <!-- STEP 3: 답변 -->
+    <!-- STEP 3: 결과 -->
     <section id="step-answer" class="card hidden">
       <h2 id="answer-title">3) 결과</h2>
       <div id="answer" class="answer"></div>
@@ -96,7 +116,7 @@
   </main>
 
   <script>
-    // ===== i18n strings =====
+    // ===== i18n =====
     const I18N = {
       ko: { title:'👀 BigEyes', lang:'언어', langHelp:'요약과 카테고리 표시 언어', step1:'1) 사진 선택', step2:'2) 카테고리 선택', analyzeBtn:'🔍 작은 글씨 요약', retry:'↻ 다시 찍기', back:'⬅ 카테고리로 돌아가기', core:'🧾 핵심요약' },
       en: { title:'👀 BigEyes', lang:'Language', langHelp:'Language for summaries & categories', step1:'1) Choose a photo', step2:'2) Choose a category', analyzeBtn:'🔍 Summarize tiny text', retry:'↻ Retake', back:'⬅ Back to categories', core:'🧾 Core summary' },
@@ -104,7 +124,6 @@
       zh: { title:'👀 BigEyes', lang:'语言', langHelp:'摘要与类别显示语言', step1:'1) 选择照片', step2:'2) 选择类别', analyzeBtn:'🔍 摘要小字', retry:'↻ 重新拍摄', back:'⬅ 返回类别', core:'🧾 核心摘要' }
     };
 
-    // 서버리스 경로(동일 도메인 기준)
     const API_BASE = '';
     const $ = (id) => document.getElementById(id);
 
@@ -128,8 +147,7 @@
     const answerTitle = $('answer-title');
 
     const langSel = $('lang');
-
-    let lastPayload = null; // { domain, categories, coreSummary }
+    let lastPayload = null;
 
     function applyI18n(){
       const L = I18N[langSel.value] || I18N.ko;
@@ -141,7 +159,6 @@
     langSel.addEventListener('change', applyI18n);
     applyI18n();
 
-    // 파일 선택 → 미리보기
     fileInput.addEventListener('change', async () => {
       const file = fileInput.files?.[0];
       if (!file) return;
@@ -150,54 +167,39 @@
       elAnalyze.classList.remove('hidden');
     });
 
-    // Base64 변환
     const toBase64 = (file) => new Promise((resolve) => {
       const reader = new FileReader();
       reader.onload = () => resolve(reader.result.split(',')[1]);
       reader.readAsDataURL(file);
     });
 
-    // 요약 요청
-elAnalyze.addEventListener('click', async () => {
-  const file = fileInput.files?.[0];
-  if (!file) return alert('이미지를 선택하세요 / Please choose an image');
+    elAnalyze.addEventListener('click', async () => {
+      const file = fileInput.files?.[0];
+      if (!file) return alert('이미지를 선택하세요 / Please choose an image');
+      elAnalyze.textContent = '⏳...'; elAnalyze.disabled = true;
+      const base64 = await toBase64(file);
 
-  const busy = (langSel.value==='en' ? 'Recognizing...' :
-                (langSel.value==='ja'? '認識中...' :
-                (langSel.value==='zh'?'识别中...' : '인식 중...')));
-  elAnalyze.textContent = busy;
-  elAnalyze.disabled = true;
+      try {
+        const r = await fetch(`${API_BASE}/api/summarize`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ imageBase64: base64, lang: langSel.value })
+        });
+        const data = await r.json();
+        if (!data.success && !r.ok) throw new Error(data.message || '분석 실패');
 
-  const base64 = await toBase64(file);
-  try {
-    const r = await fetch(`${API_BASE}/api/summarize`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ imageBase64: base64, lang: langSel.value })
+        lastPayload = data.payload || { categories:[], coreSummary:'' };
+        stepUpload.classList.add('hidden');
+        renderCategories();
+        stepCats.classList.remove('hidden');
+      } catch (e) {
+        alert(e.message);
+      } finally {
+        elAnalyze.textContent = (I18N[langSel.value]||I18N.ko).analyzeBtn;
+        elAnalyze.disabled = false;
+      }
     });
 
-    let data;
-    try { data = await r.json(); }
-    catch { throw new Error('Server returned non-JSON response'); }
-
-    if (!r.ok || !data?.success) {
-      throw new Error(data?.message || `HTTP ${r.status}`);
-    }
-
-    lastPayload = data.payload || { categories:[], coreSummary:'' };
-    stepUpload.classList.add('hidden');
-    renderCategories();
-    stepCats.classList.remove('hidden');
-  } catch (e) {
-    alert(e.message || '분석 실패');
-  } finally {
-    elAnalyze.textContent = (I18N[langSel.value]||I18N.ko).analyzeBtn;
-    elAnalyze.disabled = false;
-  }
-});
-
-
-    // 카테고리 렌더
     function renderCategories(){
       catsWrap.innerHTML = '';
       const list = lastPayload?.categories || [];
@@ -208,7 +210,6 @@ elAnalyze.addEventListener('click', async () => {
         b.addEventListener('click', () => showAnswer(c.title, c.summary));
         catsWrap.appendChild(b);
       });
-      // 핵심요약 버튼
       const coreBtn = document.createElement('button');
       coreBtn.className = 'btn secondary';
       coreBtn.textContent = (I18N[langSel.value]||I18N.ko).core;
@@ -216,7 +217,6 @@ elAnalyze.addEventListener('click', async () => {
       catsWrap.appendChild(coreBtn);
     }
 
-    // 결과 보기
     function showAnswer(title, text){
       answerTitle.textContent = title || '결과';
       answerBox.textContent = text || '-';
@@ -225,7 +225,6 @@ elAnalyze.addEventListener('click', async () => {
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
-    // 리셋 & 뒤로
     function resetAll(){
       lastPayload = null; fileInput.value = ''; img.src = ''; img.classList.add('hidden');
       elAnalyze.classList.add('hidden');
